--- a/beamerfontthememinflat.sty
+++ b/beamerfontthememinflat.sty
@@ -23,6 +23,12 @@
 \usepackage[mathrm=sym]{unicode-math}
 \setsansfont[Scale=.75,Ligatures={TeX},BoldFont={Museo Sans-500}]{Museo Sans-300}
 
+%\setsansfont{Fira Sans Book}[%
+%     ItalicFont     = {Fira Sans Book Italic},
+%     BoldFont       = {Fira Sans SemiBold},
+%     BoldItalicFont = {Fira Sans SemiBold Italic}]
+
+
 %\setmathfont{Latin Modern Math}
 %\setmathfont{Asana-Math}
 %\setmathfont{MinionPro-Regular}
